--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ cffi==2.0.0
 click==8.3.0
 cryptography==46.0.2
 Flask==3.1.2
+flask-cors==6.0.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
 itsdangerous==2.2.0
